510-t9stbot/manifests/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: t9stbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: t9stbot
  template:
    metadata:
      labels:
        app: t9stbot
    spec:
      containers:
        - name: t9stbot
          image: tuana9a/t9stbot:2024.07.25.092413
